@@ -4,6 +4,7 @@ Post-OVS-v2.12.0
      independently.
    - Added IPv6 NAT support for OVN routers.
    - Added Stateless Floating IP support in OVN.
+   - Added Forwarding Group support in OVN.
 
 v2.12.0 - 03 Sep 2019
 ---------------------
